# RL-pknu-de-2026

./: README.md  f5-4.pkl  f5-9.pkl  f6-2.keras  f6-4.keras  pyproject.toml
chapter2/: 2_1.py  2_2.py  2_3.py
chapter3/: 3_1.py  3_2.py  3_3.py  3_4.py  3_5.py  3_6.py
chapter4/: 4_1.py  4_2.py  4_3.py  4_4.py  4_5.py  4_6.py  4_7.py
chapter5/: 5_1.py  5_10.py  5_2.py  5_3.py  5_4.py  5_5.py  5_6.py  5_7.py  5_8.py  5_9.py
chapter6/: 6_1.py  6_2.py  6_3.py  6_4.py  6_5.py  6_6.py
